# pi-display

./: CLAUDE.md  Cargo.toml  Makefile  README.md  run.py
.cargo/: config.toml
scripts/: release.sh
src/: main.rs
