[package]
name = "pi-display"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4"
crossterm = "0.29.0"
ratatui = "0.30.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tui-big-text = "0.8"
